# face-detection-project

./: .gitignore  Makefile  bibliography.yaml  macros.md  metadata.yaml  reflections.md  report.md  stats.csv
Code/Merget et al./: password.txt
Code/Zhu and Ramanan/: README.md
Datasets/: download_datasets.sh
Implementations/: links.txt
Notes/: initial-meeting.md  lit-review-notes.md
gnuplot/: process_pts.awk  render_pts.gp
pandoc-plot/: config.yaml  matplotlib-preamble.py  matplotlib.py  result_plot.py
pieces/: aam-inference.md  aam-uses.md  aams.md  advancements-in-aams.md  datasets.md  image-features.md  implementation.md  landmarking-configurations.md  motivation.md  other-landmarking-methods.md  overview-of-landmarking-methods.md  quotes.md
src/: README.md  make_subset.py  pyproject.toml  requirements.txt
src/experiments/: __init__.py  __main__.py  cli.py  dataset.py  datasets.py  experiments.py  io.py  models.py  types.py  utils.py
src/experiments/algorithms/: algorithm.py  kazemi_sullivan_dlib.py
