[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "experiments"
version = "0.0.1"
dependencies = [
  "dlib",
  "funcy",
  "matplotlib",
  "numpy",
  "nptyping",
  "Pillow",
  "types-Pillow",
]

[tool.pyright]
include = ["experiments"]
typeCheckingMode = "strict"
pythonPlatform = "Linux"
pythonVersion = "3.10"
venvPath = "."
venv = "venv"

[tool.mypy]
python_executable = "./venv/bin/python"
python_version = "3.10"

check_untyped_defs = true
ignore_missing_imports = true
