[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["experiments"]

[project]
name = "experiments"
version = "0.0.1"
dependencies = [
  "matplotlib",
  "numpy",
  "menpo @ git+https://github.com/MageJohn/menpo@eebb5ca8dab4bf18747d3dbd0954c9b54efc80fb",
  "menpofit @ git+https://github.com/menpo/menpofit",
  "more_itertools",
  "click",
  "tqdm",
  "cyvlfeat",
]

[project.scripts]
experiments = "experiments.cli:cli"

[tool.mypy]
python_executable = "./venv/bin/python"
python_version = "3.10"

check_untyped_defs = true
ignore_missing_imports = true
